--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,9 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Virtual Environment
+# Ignore environment files with secrets
 .env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
 
-# Streamlit
-.streamlit/
-secrets.toml
+# Ignore temporary files
+.tmp/
 
-# TMA Magic Specific
-tma_job_*.json
-tma_status_*.json
-tma_log_*.txt
-*.pdf
-*.xlsx
-*.xls
-config.json
+# macOS
+.DS_Store
+.vercel
